--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "projets-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "devStart": "nodemon app.js"
+    "devStart": "nodemon --ignore models/data.json app.js"
   },
   "repository": {
     "type": "git",
@@ -21,16 +21,21 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "slugify": "^1.6.6",
+    "sweetalert2": "^11.7.27",
     "uuid": "^9.0.1"
   }
 }
